# dotfiles

./: .agnix.toml  .gitignore  .hadolint.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-bake.hcl  hk-common.pkl  hk-image.pkl  hk.pkl  install.sh  mise.local.toml.example  mise.toml  renovate.json
.claude/: CLAUDE.md  settings.json  settings.local.json  ultrapowers-preferences.json
.claude/agents/: devcontainer-specialist.md  dockerfile-reviewer.md
.claude/rules/: ai-cli-invocation.md  ci-local-parity.md  clean-git-state.md  omc-directory-conventions.md  persistence-gate-retry.md  use-tool-builtins.md  zero-skip-policy.md
.claude/skills/bake-action-set-precedence-expertise/: SKILL.md
.claude/skills/but/: SKILL.md
.claude/skills/chezmoi-check/: SKILL.md
.claude/skills/ci-warning-investigator/: SKILL.md
.claude/skills/devcontainer-feature-schema-probe/: SKILL.md
.claude/skills/devcontainer-workflow/: SKILL.md
.claude/skills/git-branch-commit-push-workflow/: SKILL.md
.claude/skills/mcp2cli/: SKILL.md
.claude/skills/mintlify/: SKILL.md
.claude/skills/pkl-import-hyphen-alias-expertise/: SKILL.md
.claude/skills/research-with-verification-gap-fill/: SKILL.md
.claude/skills/ssh-ignoreunknown-cross-platform/: SKILL.md
.claude/skills/tmux-extended-keys/: SKILL.md
.claude/skills/uv-project-vs-directory-expertise/: SKILL.md
.devcontainer/: AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.canon  Dockerfile.host-user  P2996-CACHE.md  devcontainer.json  mise-system-resolved.json  mise-system.toml
.devcontainer/scripts/: on-create.sh
.github/: dependabot.yml
.github/workflows/: AGENTS.md  autofix.yml  ci-failure-report.yml  ci.yml
.omc/skills/: bake-action-set-precedence-expertise.md  git-branch-commit-push-workflow.md  pkl-import-hyphen-alias-expertise.md  uv-project-vs-directory-expertise.md
.omg/state/: quota-watch.json
docs/: hk-builtins-audit.md
docs/maestro/plans/: 2026-03-22-identity-ssh-validation-design.md  2026-03-22-identity-ssh-validation-plan.md
docs/research/: devcontainer-spec-delta-2026-04-06.md  mintlify-catalog-validation-log.md  mintlify-catalog.md
docs/research/mintlify-cache/: README.md
docs/research/mintlify-cache/devcontainers/cli/: llms-full.txt  llms.txt
docs/research/mintlify-cache/devcontainers/features/: llms-full.txt  llms.txt
docs/research/mintlify-cache/devcontainers/images/: llms-full.txt  llms.txt
docs/research/mintlify-cache/devcontainers/spec/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/fnox/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/hk/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/mise/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/mise-action/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/mise-env-fnox/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/pitchfork/: llms-full.txt  llms.txt
docs/research/mintlify-cache/jdx/pklr/: llms-full.txt  llms.txt
docs/research/mintlify-cache/knowsuchagency/mcp2cli/: llms-full.txt  llms.txt
docs/research/mintlify-cache/starship/starship/: llms-full.txt  llms.txt
docs/research/mintlify-cache/twpayne/chezmoi/: llms-full.txt  llms.txt
docs/research/mintlify-cache/wagoodman/dive/: llms-full.txt  (+1 more)
docs/research/trail/findings/: deep-dive-gaps-2026-03-28.yaml  define-consensus-2026-03-28.yaml  devcontainer-docker-2026.yaml  devcontainer-spec-adversarial-review-2026-03-29.yaml  devcontainer-user-strategy-debate-2026-03-29.yaml  develop-implementation-2026-03-28.yaml  dotfiles-repo-comparison-2026-03-28.yaml  gap-analysis-discovery-2026-03-28.yaml  hk-builtins-research-2026-03-28.yaml  implementation-plan-v2-2026-03-28.yaml
docs/ultrapowers/specs/: 2026-03-29-devcontainer-host-user-migration-design.md
home/: .chezmoi.toml.tmpl  .chezmoiignore  .chezmoiremove  dot_bashrc.tmpl  dot_gitconfig  dot_tmux.conf.tmpl  dot_wezterm.lua  dot_zshrc.tmpl  pixi.toml.tmpl  pyproject.toml.tmpl
home/.chezmoiscripts/: run_after_20_import_gpg_keys.sh  run_once_before_01_install_mise.sh  run_onchange_after_10_mise_install.sh.tmpl
home/dot_config/mise/: config.toml.tmpl
missions/docker-mise-system-config/: mission.md  sandbox.md
python/: pyproject.toml
python/src/dotfiles_setup/: __init__.py  ai.py  audit.py  config.py  docker.py  ghcr.py  image.py  main.py  mise_snapshot.py  p2996_hash.py  verify.py
python/tests/: test_verify.py
python/verification/: suites.toml
scripts/: benchmark-docker.sh  devcontainer-smoke.sh  ensure-docker-up.sh  validate-devcontainer-json.sh
tests/: AGENTS.md  __init__.py  conftest.py  test_audit.py  test_bootstrap.py  test_config.py  test_ghcr.py  test_image_smoke.py  test_mise_snapshot.py  test_p2996_hash.py  test_shell_integration.py
(+4 files in other folders)
