[project]
name = "dotfiles-setup"
version = "0.1.0"
description = "Python orchestration library for dotfiles setup"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[project.scripts]
dotfiles-setup = "dotfiles_setup.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # ── Mutually contradictory docstring rules (ruff docs: pick one set) ──
    # D203 requires a blank line before class docstring; D211 forbids it.
    # D212 requires summary on the first line; D213 requires it on the second.
    # These pairs are logically incompatible — ruff itself warns when both
    # are enabled. We follow Google convention (D211 + D212 active).
    "D203", "D211", "D212", "D213",
    # ── Formatter conflicts (ruff format compatibility) ──
    # COM812 (missing trailing comma) and ISC001 (implicit string concat)
    # produce fixes that fight ruff format. Ruff docs explicitly recommend
    # ignoring both when using the built-in formatter:
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", "ISC001",
    # ── Subprocess security: intentional design, not oversight ──
    # S603 flags every subprocess.run() call as potential untrusted input.
    # S607 flags partial executable paths (e.g., "ssh-add" not "/usr/bin/ssh-add").
    # This is a CLI orchestration tool — subprocess calls are the core mechanism.
    # Tools are resolved via mise shims on $PATH; hardcoding absolute paths would
    # break in containers where shim paths differ from system paths.
    # Verified: 346 hits across the codebase, all intentional tool invocations.
    "S603", "S607",
]

[tool.ruff.lint.per-file-ignores]
# S108 (hardcoded /tmp paths): container paths are intentional, not insecure
# temp file usage. These are well-known mount points defined by devcontainer.json.
"src/dotfiles_setup/config.py" = ["S108"]
# S101 (assert in tests): standard pytest practice — assert is the test mechanism.
"../tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.ty]
python-version = "3.14"

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.docparams",
    "pylint.extensions.mccabe",
]

[tool.pylint.MESSAGES_CONTROL]
enable = ["all"]

[tool.vulture]
min_confidence = 80
paths = ["src"]
sort_by_size = true

[tool.refurb]
enable_all = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    # Linter/formatter and type-checker invoked directly by hk.pkl via
    # `uv run --project python` so hk uses pyproject.toml config with no
    # builtin-step rule dropouts (see Issue #45). Unpinned → `uv lock`
    # resolves latest; bump via `uv lock --upgrade-package ruff --upgrade-package ty`.
    "ruff",
    "ty",
]
